# neo-solidity

./: BUILD_REPORT.md  CHANGELOG.md  CODE_ANALYSIS_REPORT.md  COMPLETE_CONTRACT_TYPE_MATRIX.md  COMPREHENSIVE_CODE_ANALYSIS_REPORT.md  COMPREHENSIVE_PROJECT_DELIVERABLE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_VALIDATION.md  DEVPACK_COMPLETE_AUDIT_REPORT.md  Dockerfile  ENVIRONMENT_ANALYSIS_SUMMARY.md  FINAL_PRODUCTION_CERTIFICATION.md  GITHUB_ACTIONS_FINAL_STATUS.md  LICENSE  LOCAL_VS_GITHUB_ANALYSIS.md  Makefile  NEO_CONTRACT_TYPE_REFERENCE.sol  NEO_N3_COMPREHENSIVE_FEATURE_MATRIX.md  NEO_N3_DEVPACK_SUMMARY.md  Neo.Sol.Runtime.sln  PRODUCTION_READINESS_AUDIT.md  PROJECT_SUMMARY.md  README.md  TESTING.md  TEST_SUMMARY.md  WORKFLOW_FIXES_REPORT.md  WORKFLOW_IMPLEMENTATION_SUMMARY.md  WORKFLOW_RESOLUTION_FINAL.md  WORKFLOW_STATUS_FINAL.md  WORKFLOW_SUCCESS_FINAL.md  YUL_TO_NEOVM_COMPILATION_STRATEGY.md  ZERO_PLACEHOLDERS_CERTIFICATION.md  code_generator.go  compiler.go  lexer.go  neo-n3-technical-analysis.md  neovm_types.go  package.json  supporting_types.go  (+1 more)
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.github/: WORKFLOW_OVERVIEW.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  docker.yml  docs.yml  performance.yml  release.yml  security.yml
.hive-mind/: hive.db  hive.db-shm  hive.db-wal
.hive-mind/sessions/: hive-mind-prompt-swarm-1755870919580-u4ema1a33.txt  session-1755870919586-1x1c5o8ln-auto-save-1755870949590.json
crates/conformance/: Cargo.toml
crates/conformance/src/: lib.rs
crates/debugger/: Cargo.toml
crates/debugger/src/: error_decoder.rs  lib.rs
crates/fuzzing/: Cargo.toml
crates/fuzzing/src/: lib.rs
crates/security/: Cargo.toml
crates/security/src/: lib.rs  reentrancy_detector.rs
crates/testing/: Cargo.toml
crates/testing/src/: benchmarks.rs  differential.rs  lib.rs  unit_tests.rs
devpack/: DEVPACK_GUIDE.md  README.md  hardhat.config.js  package.json
devpack/contracts/: Framework.sol  NativeCalls.sol  Syscalls.sol
devpack/examples/: CompleteNEP11NFT.sol  CompleteNEP17Token.sol
devpack/libraries/: Neo.sol  Runtime.sol  Storage.sol
devpack/standards/: NEP11.sol  NEP17.sol  NEP24.sol
devpack/test/: DevpackIntegration.test.js
examples/: ERC20Token.cs  ERC20Token.sol  ERC721Token.sol  GovernanceToken.sol  MultiSigWallet.sol  TestContract.manifest.json  TestContract.sol  TestOnly.nef.nef  UniswapV2Pair.sol  complete_example.rs  test_compilation.sh
examples/ERC20/: ERC20Token.yul  ERC20Token_test.go
src/: codegen.rs  error.rs  lexer.rs  lib.rs  main.rs  optimizer.rs  parser.rs  semantic.rs  types.rs
src/Neo.Sol.Runtime/: EvmRuntime.cs  Neo.Sol.Runtime.csproj  README.md
src/Neo.Sol.Runtime/ABI/: AbiEncoder.cs
src/Neo.Sol.Runtime/Calls/: ExternalCallManager.cs
src/Neo.Sol.Runtime/Context/: ExecutionContext.cs
src/Neo.Sol.Runtime/Crypto/: CryptoLib.cs
src/Neo.Sol.Runtime/Events/: EventManager.cs
src/Neo.Sol.Runtime/Exceptions/: EvmExceptionHandler.cs
src/Neo.Sol.Runtime/Memory/: EvmMemoryManager.cs
src/Neo.Sol.Runtime/Registry/: AddressRegistry.cs
src/Neo.Sol.Runtime/Storage/: StorageManager.cs
src/compiler/: codegen.rs  error.rs  lexer.rs  mod.rs  optimizer.rs  parser.rs  semantic.rs
src/runtime/: bridge.rs  execution.rs  mod.rs  state.rs  storage.rs  types.rs
tests/: codegen_test.go  integration_test.go  integration_tests.rs  lexer_test.go  parser_test.go  unit_tests.rs
tests/Neo.Sol.Runtime.Tests/: ComprehensiveRuntimeTests.cs  Neo.Sol.Runtime.Tests.csproj  NeoBlockchainIntegrationTests.cs  PerformanceBenchmarks.cs
tests/Neo.Sol.Runtime.Tests/Context/: ExecutionContextTests.cs
tests/Neo.Sol.Runtime.Tests/Events/: EventManagerTests.cs
tests/Neo.Sol.Runtime.Tests/Memory/: EvmMemoryManagerTests.cs
tests/Neo.Sol.Runtime.Tests/Storage/: StorageManagerTests.cs
tests/benchmarks/: performance_benchmark_test.go
tests/fuzzing/: fuzz_test.go
tooling/: README.md  package.json  tsconfig.json  turbo.json
