[package]
name = "neo-solidity"
version = "1.0.0"
edition = "2021"
description = "Production-ready Solidity-to-NeoVM compilation system"
license = "MIT"
repository = "https://github.com/r3e-network/neo-solidity"
homepage = "https://github.com/r3e-network/neo-solidity"
documentation = "https://docs.r3e.network/neo-solidity"
authors = ["Jimmy <jimmy@r3e.network>"]
keywords = ["neo", "solidity", "blockchain", "smart-contracts", "neovm", "compiler"]
categories = ["compilers", "development-tools", "cryptography"]
readme = "README.md"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.0"
once_cell = "1.0"
dashmap = "5.0"
rayon = "1.7"
sha2 = "0.10"
sha3 = "0.10"
secp256k1 = "0.27"
num-bigint = "0.4"
num-traits = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
quickcheck = "1.0"
tempfile = "3.0"
pretty_assertions = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"
debug = true

[[bin]]
name = "neo-solc"
path = "src/main.rs"