[package]
name = "neo-solidity-debugger"
version = "0.1.0"
edition = "2021"
description = "Advanced debugging capabilities for Neo Solidity with source maps and trace hooks"

[dependencies]
# Core utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"

# Source map handling
sourcemap = "8.0"
base64 = "0.22"

# AST and parsing
syn = { version = "2.0", features = ["full"] }
quote = "1.0"

# Binary analysis
object = "0.33"
gimli = "0.29"

# Interactive debugging
crossterm = "0.27"
ratatui = "0.24"

# Neo and EVM integration
neo-vm = "0.1"
alloy-primitives = "0.7"
revm = { version = "10.0", features = ["std"] }

# Parent crate
neo-solidity = { path = "../.." }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.8"

[features]
default = ["source-maps", "trace-hooks", "interactive-debug"]
source-maps = ["sourcemap"]
trace-hooks = []
interactive-debug = ["crossterm", "ratatui"]
dwarf-debug = ["gimli", "object"]