[package]
name = "neo-solidity-fuzzing"
version = "0.1.0"
edition = "2021"
description = "Fuzzing harnesses for Neo Solidity ABI boundaries"

[dependencies]
# Core fuzzing
arbitrary = { version = "1.3", features = ["derive"] }
libfuzzer-sys = "0.4"
proptest = "1.4"
quickcheck = "1.0"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
hex = "0.4"
bytes = "1.5"

# Crypto for random data
rand = "0.8"
sha3 = "0.10"

# Neo and EVM integration
neo-vm = "0.1"
alloy-primitives = "0.7"
alloy-sol-types = "0.7"
revm = { version = "10.0", features = ["std"] }

# Parent crate
neo-solidity = { path = "../.." }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.8"

[features]
default = ["abi-fuzzing", "data-fuzzing", "transaction-fuzzing"]
abi-fuzzing = []
data-fuzzing = []
transaction-fuzzing = []
boundary-fuzzing = []

[[bin]]
name = "fuzz_abi_decode"
path = "src/bin/fuzz_abi_decode.rs"

[[bin]]
name = "fuzz_abi_encode"
path = "src/bin/fuzz_abi_encode.rs"

[[bin]]
name = "fuzz_transaction_data"
path = "src/bin/fuzz_transaction_data.rs"

[[bin]]
name = "fuzz_contract_calls"
path = "src/bin/fuzz_contract_calls.rs"