[package]
name = "neo-solidity-testing"
version = "0.1.0"
edition = "2021"
description = "Comprehensive testing framework for Neo Solidity"

[dependencies]
# Core testing
rstest = "0.18"
proptest = "1.4"
quickcheck = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
mockall = "0.12"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"

# Test data generation
fake = "2.9"
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"

# Neo and EVM integration
neo-vm = "0.1"
alloy-primitives = "0.7"
revm = { version = "10.0", features = ["std"] }

# Parent crate
neo-solidity = { path = "../.." }

[features]
default = ["unit-tests", "integration-tests"]
unit-tests = []
integration-tests = []
differential-testing = []
performance-benchmarks = []